<resources>
    <string name="Food_Service">Food Service</string>
    <string name="Enter_name">Enter Name</string>
    <string name="Enter_Food_Item">Enter Food Item</string>
    <string name="Enter_Phone_No">Enter Phone No</string>
    <string name="Description">Description</string>
    <string name="Donate_Now">Donate Now</string>
    <string name="donate_now">Donate Now</string>
    <string name="Thank_You">Thank You For Your Donation</string>
    <string name="image_description">Description of the image</string>
    <string name="stationary_donation">Stationary Donation</string>
    <string name="Stationary_Item">Enter Stationary Item</string>
    <string name="Old">Old</string>
    <string name="New">New</string>
    <string name="Used">Used</string>
    <string name="item_status">Item Status</string>
    <string name="Capture_Image">Capture Image</string>
    <string name="image_preview">Image Preview</string>
    <string name="app_Name">Demo</string>
    <string name="ClothesDonation">Your Text Here</string>
    <string name="Stationary_Donation">Stationary Donation</string>
    <string name="make_an_impact">Make an Impact</string>
    <string name="kindred_spirit">Kindred Spirit</string>
    <string name="Medicine_Donation_Form">Medicine Donation Form</string>
    <string name="Donar_Name">Donar Name</string>
    <string name="Contact_Number">Contact Number</string>
    <string name="Email_Address">Email Address</string>
    <string name="Medicine_Name">Medicine_Name</string>
    <string name="Expiry_date">Expiry Date (DD/MM/YYYY)</string>
    <string name="Quantity">Quantity</string>
    <string name="Batch_number">Batch_Number</string>
    <string name="Manufacturer">Manufacturer</string>
    <string name="Storage_Requirements">Storage Requirements</string>
    <string name="Form_submitted_successfully">Form submitted successfully!</string>
    <string name="Submit_Donation">Submit Donation</string>
    <string name="app_name">YourAppName</string>
    <string name="Clothes_Donation">Clothes Donation</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_contact_number">Enter contact number</string>
    <string name="enter_address">Enter address</string>
    <string name="type_of_clothes_e_g_shirt_pants">Type of clothes (e.g., shirt, pants)</string>
    <string name="size_e_g_s_m_l">Size (e.g., S, M, L)</string>
    <string name="condition_new_gently_used">Condition (new, gently used)</string>
    <string name="quantity">Quantity</string>
    <string name="upload_image">Upload Image</string>

    <string name="selected_clothes_image">Selected clothes image</string>


    <string name="select_donation_type">Select Donation Type</string>
    <string name="donate_money">Donate Money</string>
    <string name="donate_items">Donate Items</string>
    <string name="enter_donation_amount">Enter donation amount</string>
    <string name="enter_donation_item_details">Enter donation item details</string>
    <string name="donation_item_image">Donation item image</string>
    <string name="donate">Donate</string>
    <string name="Clothing_item_name">Clothing Item Name</string>
</resources>